samples/_failures_safe/1761399078_315382_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9481d8f0.c: In function ‘primMST’:
./samples/SAFE/__tmp_9481d8f0.c:127:32: error: expected ‘;’ at end of input
  127 |                     decreaseKey
      |                                ^
      |                                ;
./samples/SAFE/__tmp_9481d8f0.c:127:21: error: expected declaration or statement at end of input
  127 |                     decreaseKey
      |                     ^~~~~~~~~~~
./samples/SAFE/__tmp_9481d8f0.c:127:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9481d8f0.c:127:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9481d8f0.c:127:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9481d8f0.c:127:21: error: expected declaration or statement at end of input
